Fix auto pagination and add spacing

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -40,8 +40,8 @@ h3 {
 }
 
 p {
-  margin: 0;
-  padding: 0;
+  margin: 0 !important;
+  padding: 0 !important;
 }
 
 .content {
